--- a/modules/utilities/unix/languages/golang/secgen_metadata.xml
+++ b/modules/utilities/unix/languages/golang/secgen_metadata.xml
@@ -3,24 +3,22 @@
 <utility xmlns="http://www.github/cliffe/SecGen/utility"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://www.github/cliffe/SecGen/utility">
-  <name>Git VCS</name>
+  <name>Go programming language</name>
+  <author>Darren Coxall</author>
   <author>Thomas Shaw</author>
   <module_license>MIT</module_license>
-  <description>Git version control / source code management system.</description>
+  <description>An installation of the Go programming language</description>
 
-  <type>VCS</type>
+  <type>language</type>
+  <type>go</type>
   <platform>linux</platform>
 
   <!--optional details-->
-  <reference>https://git-scm.com/</reference>
-  <software_name>git</software_name>
-
-  <conflict>
-    <name>Stretch</name>
-  </conflict>
+  <reference>https://forge.puppet.com/dcoxall/golang</reference>
+  <software_name>golang</software_name>
+  <software_license>MIT</software_license>
 
   <requires>
     <type>update</type>
   </requires>
-
 </utility>
